in-memory enforcement of ttls
Signed-off-by: Erik Sipsma <erik@sipsma.dev>

--- a/core/db/sqlc.yaml
+++ b/core/db/sqlc.yaml
@@ -7,3 +7,5 @@ sql:
       go:
         package: "db"
         out: "."
+        output_db_file_name: "db.gen.go"
+        emit_prepared_queries: true
