--- a/hack/build
+++ b/hack/build
@@ -1,4 +1,4 @@
-#!/usr/bin/env -S dagger shell --no-mod
+#!/usr/bin/env -S dagger --interactive shell --no-mod
 
 # hack/build builds the engine and cli from local code, and additionally starts
 # the engine in the host's docker runtime.
